--- a/mbbeats/src/components/public/navigation/navigation.scss
+++ b/mbbeats/src/components/public/navigation/navigation.scss
@@ -24,8 +24,16 @@
             color: rgb(190, 90, 8);
         }
 
+        .buttonNav{
+            text-decoration: none;
+            list-style-type: none;
+            color: black;
+        }
+
         li{
             list-style-type: none;
+            cursor: pointer;
+            text-decoration: none;
             padding-bottom: 5px;
             font-size: 1rem;
             font-weight: 500;
