--- a/mbbeats/src/components/public/navigation/navigation.scss
+++ b/mbbeats/src/components/public/navigation/navigation.scss
@@ -11,6 +11,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
+
+        img{
+            width: 170px;
+            height: auto;
+        }
     }
 
     .navbar{
