--- a/mbbeats/src/pages/public/beats/beats.scss
+++ b/mbbeats/src/pages/public/beats/beats.scss
@@ -29,12 +29,12 @@
             border: 1px solid green;
             transition: 0.5s ease;
 
-            figure{
+            .previewBtn{
                 visibility: hidden;
                 width: 100%;
                 height: 50px;
+                text-decoration: none;
                 display: flex;
-                border: 1px solid black;
                 justify-content: center;
                 align-items: center;
                 transition: 0.3s ease;
@@ -47,7 +47,7 @@
 
             &:hover{
 
-                figure{
+                .previewBtn{
                     visibility: visible;
 
                 }
